modules/gdscript/tests/scripts/analyzer/errors/virtual_super_not_implemented.gd
func _init():
	super()

func test():
	pass
